# FruitySerial

./: CMakeLists.txt  README.md  main.cpp
Assets/: guide.txt
Data/: DTypes.h  LineData.cpp  LineData.h
Manager/: SerialConnection.cpp  SerialConnection.h  SerialManager.cpp  SerialManager.h
Serial/: CMakeLists.txt
Serial/src/impl/: win.cc
Tools/: ClockTime.cpp  ClockTime.h  FunctionTools.cpp  FunctionTools.h  SendLog.cpp  SendLog.h  UndoRedo.cpp  UndoRedo.h
UIDisplays/: Hud.cpp  Hud.h  MainWindow.cpp  MainWindow.h  SubWindow.cpp  SubWindow.h  TabSerialWindow.cpp  TabSerialWindow.h
imGui/: imgui_demo.cpp
